Docs theme: Mobile - Fix h1 size on small breakpoint

--- a/docs/static/css/style-responsive.css
+++ b/docs/static/css/style-responsive.css
@@ -55,3 +55,10 @@
         display: none;
     }
 }
+
+@media (max-width:360px) {
+
+    h1 {
+        font-size: 1.9em;
+    }
+}
